src/objects/X3_0_Kasese_Gnuts__c.object
<CustomObject>
    <fields>
        <fullName>A_Kg_of_shelled_gnuts_at_retail_price__c</fullName>
        <label>A Kg of shelled gnuts at retail price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Kg_of_shelled_gnuts_at_wholesale_price__c</fullName>
        <label>A Kg of shelled gnuts at wholesale price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_the_trader_in_Gnuts__c</fullName>
        <label>Name of the trader in Gnuts</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_0_Market_Kasese__c</fullName>
        <label>3.0 Market Kasese</label>
        <referenceTo>Market_Kasese__c</referenceTo>
        <relationshipLabel>3.0 Kasese Gnuts</relationshipLabel>
        <relationshipName>X3_0_Kasese_Gnuts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Kasese Gnuts</label>
    <nameField>
        <displayFormat>KG-{0000}</displayFormat>
        <label>3.0 Kasese Gnuts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Kasese Gnuts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>